# geolocation-domain-shift

./: .gitignore  FULL_FINETUNING.md  LICENSE  README.md  pyproject.toml
logs/: domain_shift_5242912.err  domain_shift_5242912.out  domain_shift_5242959.err  domain_shift_5242959.out  lora_5119411.err  lora_5119411.out  lora_5119566.err  lora_5119566.out  lora_5120950.err  lora_5120950.out
results/baseline/: linear_probe_metrics.json  linear_probe_per_class.json  summary.json  training_log.json  zero_shot_metrics.json  zero_shot_per_class.json
results/comparisons/: summary.json
results/domain_shift/: comparison.json
results/full_finetune/: full_finetune_metrics.json  full_finetune_per_class.json  summary.json  trainable_parameters.json  training_log.json
results/full_finetune_domain_shift/: comparison.json  summary.json
results/lora/: lora_metrics.json  lora_per_class.json  lora_training_log.json  summary.json
results/lora_25k/: lora_metrics.json  lora_per_class.json  lora_training_log.json  summary.json  trainable_parameters.json
scripts/: run_baseline.py  run_domain_shift.py  run_domain_shift.slurm  run_full_finetune.py  run_full_finetune.slurm  run_full_finetune_domain_shift.py  run_lora.py  run_lora.slurm  verify_data_pipeline.py  visualize_domain_shift.py  visualize_full_finetune.py  visualize_full_finetune_domain_shift.py  visualize_lora_results.py  visualize_method_comparisons.py  visualize_results.py
src/data/: __init__.py  osv5m_dataset.py
src/models/: __init__.py  clip_geolocation.py
tests/: test_model.py
(+16 files in other folders)
